logs/whisperctl.log
Listing '.'...
Listing './bin'...
Compiling './bin/find-corrupt-whisper-files.py'...
Compiling './bin/rrd2whisper.py'...
Compiling './bin/update-storage-times.py'...
Compiling './bin/whisper-auto-resize.py'...
Compiling './bin/whisper-auto-update.py'...
Compiling './bin/whisper-create.py'...
Compiling './bin/whisper-diff.py'...
Compiling './bin/whisper-dump.py'...
Compiling './bin/whisper-fetch.py'...
Compiling './bin/whisper-fill.py'...
Compiling './bin/whisper-info.py'...
Compiling './bin/whisper-merge.py'...
Compiling './bin/whisper-resize.py'...
Compiling './bin/whisper-set-aggregation-method.py'...
Compiling './bin/whisper-set-xfilesfactor.py'...
Compiling './bin/whisper-update.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/whisper-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/whisperctl'...
Listing './lib/python3.5/site-packages/whisperctl/indexer'...
Compiling './lib/python3.5/site-packages/whisperctl/whisperctl.py'...
***   File "./lib/python3.5/site-packages/whisperctl/whisperctl.py", line 261
    print globals()[args.command](**args.__dict__)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/whisperctl-0.2.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
